@@ -4,6 +4,7 @@ New features:
 A.F....... [ZBX-1357] enabled Portuguese (Portugal) translation to be displayed by default (zalex_ua)
 
 Bug fixes:
+........S. [ZBX-14614] fixed server template linking with triggers having no dependencies (MVekslers)
 ...G...... [ZBX-6565,ZBX-13645,ZBX-14559] fixed agent on AIX 6.1 TL0, 7.1 TL0: system.stat[memory,avm], compilation, crash on net.dns[] items (Andris)
 ..F....... [ZBX-13015] fixed X axis labels with DST transition in the displayed period (Sasha)
 ........S. [ZBX-14777] increased severity of housekeeper logs in the case of invalid history/trends intervals (wiper)
@@ -1344,6 +1345,7 @@ Changes for 3.0.22rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-14614] fixed server template linking with triggers having no dependencies (MVekslers)
 ...G...... [ZBX-6565,ZBX-13645,ZBX-14559] fixed agent on AIX 6.1 TL0, 7.1 TL0: system.stat[memory,avm], compilation, crash on net.dns[] items (Andris)
 ..F....... [ZBX-13015] fixed X axis labels with DST transition in the displayed period (Sasha)
 ........S. [ZBX-14778] fixed housekeeper attempting to remove history of discovery rules/prototypes (wiper)
